- fixed chatscreen long name title wrap overflow

--- a/SPIXI/SPIXI.Android/Assets/html/css/spixiui.css
+++ b/SPIXI/SPIXI.Android/Assets/html/css/spixiui.css
@@ -237,6 +237,7 @@ img.emoji {
 }
 
 .spixi-toolbar-chat-name {
+    white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
 }
